# BCK

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  AGENTS.md  Cargo.toml  DEPLOY.bat  DEPLOY.sh  DEPLOYMENT.md  Dockerfile  Makefile  PLAN.md  README.md  README_UA.md  basic-test.js  build-and-deploy.sh  config.test.toml  config.toml  db.json  docker-compose.full.yml  docker-compose.yml  eslint.config.js  fix_syntax.js  go.mod  go.sum  install.bat  install.sh  package-lock.json  package.json  plan.md  run-local.bat  run-local.sh  server.js  test-cloud.js  test-services.js  test_gfs.js
.github/workflows/: ci-cd.yml
agent/: Cargo.toml
agent/src/: main.rs
bckd/: Cargo.toml
bckd/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
cmd/backup-agent/: main.go
cmd/backup-api/: main.go
cmd/backup-cli/: main.go
cmd/backup-scheduler/: main.go
cmd/backup-worker/: main.go
configs/: config.example.yaml  openapi.yaml
core/: Cargo.toml  build.rs
core/proto/: bck.proto
core/src/: lib.rs
core/src/agent/: appaware.rs  discovery.rs  mod.rs  vss.rs
core/src/api/: grpc.rs  mod.rs
core/src/auth/: jwt.rs  mod.rs
core/src/backup/: mod.rs  vm.rs
core/src/cdp/: journal.rs  mod.rs  replicator.rs  watcher.rs
core/src/chunker/: mod.rs
core/src/cloud/: mod.rs
core/src/cloud/aws/: ebs.rs  ec2.rs  mod.rs  rds.rs
core/src/cloud/azure/: disks.rs  mod.rs  sql.rs  vm.rs
core/src/cloud/gcp/: disks.rs  gce.rs  mod.rs  sql.rs
core/src/cloud/k8s/: mod.rs  pvc.rs  resources.rs  restore.rs
core/src/compress/: mod.rs
core/src/config/: mod.rs
core/src/db/: mod.rs
core/src/db/migrations/: 20240720000001_initial.sql
core/src/db/models/: hypervisor.rs  job.rs  mod.rs  repository.rs  snapshot.rs  user.rs  vm.rs
core/src/dedup/: mod.rs
core/src/dr/: failover.rs  mod.rs  replication.rs  site.rs
core/src/encrypt/: mod.rs
core/src/enterprise/: audit.rs  mod.rs  multitenant.rs  reports.rs  sso.rs
core/src/index/: mod.rs
core/src/integrations/: mod.rs
core/src/integrations/hyperv/: mod.rs
core/src/integrations/vmware/: mod.rs
core/src/job/: mod.rs
core/src/m365/: graph.rs  mailbox.rs  mod.rs  onedrive.rs  sharepoint.rs
core/src/pipeline/: mod.rs
core/src/proxy/: mod.rs
core/src/recovery/: mod.rs
core/src/restore/: mod.rs  surebackup.rs  tracker.rs
core/src/restore/explorer/: mod.rs
core/src/restore/instant/: iscsi.rs  mod.rs  nfs.rs
core/src/scanner/: mod.rs
core/src/scheduler/: mod.rs
core/src/server/: mod.rs
core/src/server/middleware/: auth.rs
core/src/server/routes/: auth.rs  dashboard.rs  hypervisors.rs  jobs.rs  mod.rs  repositories.rs  restore.rs  snapshots.rs
core/src/snapshot/: mod.rs
core/src/sobr/: mod.rs  policy.rs  tier.rs
core/src/storage/: azure.rs  local.rs  mod.rs  s3.rs
core/src/stream/: mod.rs
core/src/tape/: library.rs  ltfs.rs  media.rs  mod.rs
core/src/throttle/: mod.rs
core/src/types/: mod.rs
deployments/: docker-compose.yml  prometheus.yml
deployments/ansible/: deploy.yml
deployments/docker/: Dockerfile.agent  Dockerfile.api  Dockerfile.scheduler  Dockerfile.web  Dockerfile.worker
deployments/grafana/: dashboard.json
deployments/helm/: Chart.yaml  (+1 more)
desktop/: package.json
extension/: background.js  manifest.json  popup.html  popup.js
frontend/: .eslintrc.js  db.json  index.html  lint-staged.config.js  package-lock.json  package.json  vite.config.js
marketplace/: recipes.json
middleware/: auth.js  ipAllowlist.js  rateLimit.js  validation.js
mobile/: index.js  package.json
prometheus/: prometheus.yml
proxy/: Cargo.toml
proxy/src/: main.rs
routes/: auth.js  backups.js  connections.js  organizations.js  policies.js  roles.js  routes.test.js  schedules.js  system.js  tokens.js  users.js  versions.js  webhooks.js
scripts/: fix_syntax.js  migrate2.js  migrate_to_pg.js  setup.ps1  setup.sh  smoke-test-commands.txt  smoke-test.sh  test-all-services.js  transform.js  verify-project.js
services/: backupExecutor.js  cloud.js  cloud.test.js  config.js  cron.js  crypto.js  crypto.test.js  database.full.test.js  database.js  db.js  db.test.js  exec.full.test.js  exec.js  exec.test.js  gfsRetention.js  helpers.js  host.js  ldap.js  logger.js  metrics.js  queue.js  restoreExecutor.js  s3versions.js  ssh.js  validation.test.js  validator.js  vm.full.test.js  vm.js  webhooks.js  webhooks.test.js
terraform-provider/: README.md  main.go  main.tf  provider.go  resource_backup.go  resource_schedule.go
web/: package-lock.json  package.json
web-ui/: index.html  package.json  vite.config.ts
(+212 files in other folders)
